@@ -36,6 +36,7 @@ static const char *USAGE_BIG[] =
   "     --status                  |      | Enable automatic update of the status-screen         |",
   "     --status-timer            | Num  | Sets seconds between status-screen update to X       | --status-timer=1",
   "     --machine-readable        |      | Display the status view in a machine readable format |",
+  "     --keep-guessing           |      | Keep guessing the hash after it has been cracked     |",
   "     --loopback                |      | Add new plains to induct directory                   |",
   "     --weak-hash-threshold     | Num  | Threshold X when to stop checking for weak hashes    | --weak=0",
   "     --markov-hcstat           | File | Specify hcstat file to use                           | --markov-hc=my.hcstat",
@@ -46,7 +47,7 @@ static const char *USAGE_BIG[] =
   "     --session                 | Str  | Define specific session name                         | --session=mysession",
   "     --restore                 |      | Restore session from --session                       |",
   "     --restore-disable         |      | Do not write restore file                            |",
-  "     --restore-file-path       | Dir  | Specific path to restore file                        | --restore-file-path=my.restore",
+  "     --restore-file-path       | File | Specific path to restore file                        | --restore-file-path=my.restore",
   " -o, --outfile                 | File | Define outfile for recovered hash                    | -o outfile.txt",
   "     --outfile-format          | Num  | Define outfile-format X for recovered hash           | --outfile-format=7",
   "     --outfile-autohex-disable |      | Disable the use of $HEX[] in output plains           |",
